# timetable

./: LICENSE  Makefile  README.md  justfile  meson.build
include/timetable/: timetable.hpp
test/: meson.build  test.cpp
